fix(app): Add spacing above validation/sidebar content

--- a/packages/openneuro-components/src/dataset/dataset-page.scss
+++ b/packages/openneuro-components/src/dataset/dataset-page.scss
@@ -49,7 +49,6 @@
     }
   }
   .dataset-header-alert {
-    margin-bottom: 20px;
     padding: 10px 20px;
     background: #b5f1b5;
     display: flex;
@@ -65,6 +64,10 @@
     span[data-tooltip] {
       display: inline;
     }
+  }
+
+  .dataset-content {
+    margin-top: 25px;
   }
 
   .dataset-validation {
